--- a/HexGraph1/HexGraph1/HexGraph1.vcxproj.filters
+++ b/HexGraph1/HexGraph1/HexGraph1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="GraphManager.cpp">
       <Filter>Zdrojové soubory</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Zdrojové soubory\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h">
@@ -39,6 +42,9 @@
       <Filter>Hlavičkové soubory</Filter>
     </ClInclude>
     <ClInclude Include="Edge.h">
+      <Filter>Hlavičkové soubory</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
       <Filter>Hlavičkové soubory</Filter>
     </ClInclude>
   </ItemGroup>
