--- a/HexGraph1/HexGraph1/HexGraph1.vcxproj.filters
+++ b/HexGraph1/HexGraph1/HexGraph1.vcxproj.filters
@@ -24,10 +24,10 @@
     <ClCompile Include="Node.cpp">
       <Filter>Zdrojové soubory\Components</Filter>
     </ClCompile>
-    <ClCompile Include="GraphManager.cpp">
-      <Filter>Zdrojové soubory</Filter>
-    </ClCompile>
     <ClCompile Include="Player.cpp">
+      <Filter>Zdrojové soubory\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphManager.cpp">
       <Filter>Zdrojové soubory\Components</Filter>
     </ClCompile>
   </ItemGroup>
@@ -39,9 +39,6 @@
       <Filter>Hlavičkové soubory</Filter>
     </ClInclude>
     <ClInclude Include="Vector.h">
-      <Filter>Hlavičkové soubory</Filter>
-    </ClInclude>
-    <ClInclude Include="Edge.h">
       <Filter>Hlavičkové soubory</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
