added node graph - not implemented

--- a/HexGraph1/HexGraph1/HexGraph1.vcxproj
+++ b/HexGraph1/HexGraph1/HexGraph1.vcxproj
@@ -147,12 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GraphGenerator.cpp" />
     <ClCompile Include="GraphManager.cpp" />
     <ClCompile Include="HexGraph1.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GraphGenerator.h" />
     <ClInclude Include="GraphManager.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Player.h" />
